- BudyyPress-Like: Updated module to version 0.2.0 and improved catalan translation (Trello #793)
- bbPress: Updated module to version 2.5.8 (Trello #793)
- bbPress: Fixed media upload using Fancy Editor (GitHub #130)
- Theme reactor-primaria-1: Added fields for custom CSS (GitHub #253)
- Set default selected image size to large on page and article creation


Changes 15.08.10
---------------------------------------------------------------------------------------
- Added new function to manage superadmin and xtecadmin
- Updated Mailer WSDL's


Changes 15.07.20
---------------------------------------------------------------------------------------
- Upgraded WordPress to version 4.2.2 (Trello #793)
- Added submodule of Multisite common functions
- Added message to warn user about quota exceeded in BuddyPress Activity+
- Improved some styles (GCE, buttons, table and image margin with text and code styling) (GitHub #208)
- GCE: Changed default cache duration to 300 seconds (Trello #875)
- GCE: Fixed visualitzation of calendar in list mode (GitHub #219)
- Convert Socialmedia to a plugin (GitHub #64 - Partial fix)
- Convert Enllaços educatius to a plugin (GitHub #213)
- Removed link to Social Articles in BuddyPress admin page
- Updated mailer library
- Added some information to replace URL script, for PORTAL
- Fixed catalan spelling in Appearance | Customize | Colors (GitHub #206)
- XTEC Stats: Added first version which includes just a widget to count visits (Trello #821)
- BP-Docs: Hidden "Associated elements" in document edition (Trello #883)
- Reactor-primaria-1: Deleted unused files for theme colours (GitHub #214)
- Updated mailer library
- Added two colour palettes to theme (GitHub #216)
- Improved visualitzation of Visibility block in Appearance | Customize (GitHub #204)
- Intraweb Importer: Added plugin import data from Intraweb (Trello #732)
- Fixed removal of statistics older than one year (Trello #820)