@@ -22,6 +22,8 @@ Changes in progress
 - bbPress: Fixed media upload using Fancy Editor (GitHub #130)
 - Theme reactor-primaria-1: Added fields for custom CSS (GitHub #253)
 - Set default selected image size to large on page and article creation
+- BuddyPress Activity Plus: Updated module to version 1.6.2 (Trello #793)
+
 
 
 Changes 15.08.10
